2003-02-12  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-pilot-mailsync.el (shimbun-reply-to): Bug fixed.

2003-02-11  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-pilot-mailsync.el: New file.

2003-02-10  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-palmfan.el: Update copyright notice.

	* shimbun/sb-vinelinux.el: Update copyright notice.
	(shimbun-vinelinux-from-address): Typo fixed.

2003-02-09  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-coldsync.el: New file.
	* shimbun/sb-jpilot.el: Ditto.

	* shimbun/sb-vinelinux.el (shimbun-make-contents): Change for web
	page rearranging.

2003-02-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-submit): Remove `!CURRENT_URL!' from
	action tag.

2003-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (TopLevel): Don't gererate the w3m-kwds.el file if
	there is no permission to write.

	* shimbun/.cvsignore: New file.

	* Makefile.in (clean): Remove shimbun/shimbun-servers.el.

2003-02-04  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
	Katsumi Yamaoka <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-shimbun-servers-file): New function.
	(TopLevel): Call it.

2003-02-04  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* w3mhack.el (shimbun-servers-file): New constant.

	* shimbun/shimbun.el (TopLevel): Require `shimbun-servers'.

	* shimbun/nnshimbun.el (gnus-group-make-shimbun-group): Use
	`shimbun-servers-alist'.

2003-02-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mode): Bind `auto-hscroll-mode' for Emacs-21.3.

2003-01-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-image-type): Move forward.
	(w3m-fontify-images): Use `w3m-action' and `w3m-anchor' instead of
	`get-text-property'.
	(w3m-toggle-inline-images-internal): Use `w3m-image' instead of
	`get-text-property'.
	(w3m-toggle-inline-image): Don't specify the arg to `w3m-image'.
	(w3m-resize-inline-image-internal): Use `w3m-image' instead of
	`get-text-property'.