@@ -1,3 +1,9 @@
+2003-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-xmas.el (w3m-insert-image): Use `map-extents' instead of
+	`extent-at' repeatedly.
+	(w3m-remove-image): Ditto.
+
 2003-02-12  NAKAJIMA Mikio  <minakaji@namazu.org>
 
 	* shimbun/sb-pilot-mailsync.el (shimbun-reply-to): Bug fixed.
